objects/User_Custom_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_Fields__c</fullName>
        <label>Result Fields</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Search_Fields__c</fullName>
        <label>Search Fields</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Custom_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Custom Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>User__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Search_Fields__c</columns>
        <columns>Result_Fields__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UCS-{000000}</displayFormat>
        <label>User Custom Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Custom Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>